# batteries-included

./: .gitignore  Makefile  README.md  nx_pages.py  pyproject.toml  vite-tailwind-shadcn.txt
.hide/: Makefile_long
bootstrapper/: cli.py
scripts/: bootstrap_api_client_openapi.sh  bootstrap_auth_supabase.sh  bootstrap_nextjs_api_client.sh  bootstrap_nextjs_tailwind_shadcn.sh  bootstrap_vite_tailwind_shadcn.sh
